# action-attest

./: CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci-release-package.yml  ci-test.yml
docker/: Dockerfile
src/: cli.py
src/asset/: post_release_issue_body.jinja2
src/command/: run.py
src/function/: create_github_issue.py  create_merkle_tree_from_folder.py  create_originstamp_timestamp.py  download_github_release.py  github_api.py
src/type/: file_hash.py  merkle_tree.py
