[project]
requires-python = ">=3.12"
version = "0.0.0"
name = "ember-nexus-action-attest"
dependencies = [
    "click==8.1.7",
    "dataclasses-json==0.6.7",
    "Jinja2==3.1.4",
    "requests==2.32.3",
    "ruff==0.5.3",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ember-nexus", "github-action", "attest", "attestation", "provenance"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true